<?xml version="1.0"?>
<package format="3">
  <name>acs_waypoint_gui</name>
  <version>0.0.1</version>
  <description>ACS Waypoint Mission GUI for Gazebo simulation</description>
  <maintainer email="amap@example.com">amap</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>waypoint_interfaces</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
