<?xml version="1.0"?>
<package format="3">
  <name>waypoint_manager</name>
  <version>0.0.1</version>
  <description>Waypoint mission manager for AMR motion control</description>
  <maintainer email="amap@example.com">amap</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>amr_interfaces</depend>
  <depend>waypoint_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
