<?xml version="1.0"?>
<package format="3">
  <name>amr_motion_test_ui</name>
  <version>0.1.0</version>
  <description>CLI test UI for AMR motion control action servers</description>
  <maintainer email="user@example.com">amap</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>amr_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
